@@ -1,10 +1,9 @@
 package cc.alcina.framework.gwt.client.dirndl.model.edit;
 
-import java.util.stream.Collectors;
-
 import cc.alcina.framework.common.client.dom.DomNode;
 import cc.alcina.framework.common.client.reflection.TypedProperties;
 import cc.alcina.framework.common.client.serializer.TypeSerialization;
+import cc.alcina.framework.common.client.util.Al;
 import cc.alcina.framework.common.client.util.Ax;
 import cc.alcina.framework.gwt.client.dirndl.annotation.Binding;
 import cc.alcina.framework.gwt.client.dirndl.annotation.Binding.Type;
@@ -23,6 +22,7 @@ import cc.alcina.framework.gwt.client.dirndl.layout.HasTag;
 import cc.alcina.framework.gwt.client.dirndl.model.Model;
 import cc.alcina.framework.gwt.client.dirndl.model.Model.FocusOnBind;
 import cc.alcina.framework.gwt.client.dirndl.model.dom.EditSelection;
+import cc.alcina.framework.gwt.client.dirndl.model.edit.DecoratorEvent.MutationStrings;
 import cc.alcina.framework.gwt.client.dirndl.model.fragment.FragmentModel;
 import cc.alcina.framework.gwt.client.dirndl.model.fragment.FragmentModel.ModelMutation;
 import cc.alcina.framework.gwt.client.dirndl.model.fragment.FragmentResolver;
@@ -164,6 +164,16 @@ public class EditArea extends Model.Fields
 
 	@Override
 	public void onMutation(Mutation event) {
+		if (Al.isRomcom()) {
+			DecoratorEvent decoratorEvent = new DecoratorEvent()
+					.withType(DecoratorEvent.Type.editor_transforms);
+			DecoratorEvent.MutationStrings mutationStrings = new MutationStrings();
+			mutationStrings.mutationRecords = Ax.newlineJoin(event.records);
+			mutationStrings.editorDom = provideElement().asDomNode()
+					.prettyToString();
+			decoratorEvent.mutationStrings = mutationStrings;
+			decoratorEvent.publish();
+		}
 		fragmentModel.onMutation(event);
 	}
 
@@ -195,10 +205,11 @@ public class EditArea extends Model.Fields
 	}
 
 	void refreshSpacers(ModelMutation event) {
-		if (event.getData().entries.size() > 0) {
-			fragmentModel.byTypeAssignable(DecoratorNode.class)
-					.collect(Collectors.toList())
-					.forEach(DecoratorNode::ensureSpacers);
-		}
+		fragmentModel.byTypeAssignable(ZeroWidthCursorTarget.class).toList()
+				.forEach(ZeroWidthCursorTarget::removeIfNotRequired);
+		fragmentModel.byTypeAssignable(DecoratorNode.class).toList()
+				.forEach(DecoratorNode::ensureSpacers);
+		new DecoratorEvent().withType(DecoratorEvent.Type.spacers_refreshed)
+				.publish();
 	}
 }
